--- a/Iemanja/style/iemanja.css
+++ b/Iemanja/style/iemanja.css
@@ -125,6 +125,23 @@ main p {
     line-height: 2em;
 }
 
+footer {
+    text-align: center;
+    background-color: var(--corIa5);
+    color: var(--corIa1);
+    font: var(--font-Titulos) lighter;
+}
+
+footer a {
+    color: var(--corIa1);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--corIa2);
+    text-decoration: underline;
+}
+
 @media  (min-width: 536px) and (max-width: 690px) 
 {
     
@@ -203,7 +220,7 @@ main p {
         padding-bottom: 30px;
     }
 
-    #nav2 {
+    nav > a #nav2 {
         padding-left: 100;
     }
 
