--- a/Iemanja/style/iemanja.css
+++ b/Iemanja/style/iemanja.css
@@ -220,12 +220,20 @@ footer a:hover {
         padding-bottom: 30px;
     }
 
-    nav > a #nav2 {
-        padding-left: 100;
+    #nav1 {
+        padding-right: 250;
+    }
+
+    #nav2 {
+        padding-right: 250;
     }
 
     #nav3 {
-        padding-right: 200;
+        padding-right: 250;
+    }
+
+    #nav4 {
+        padding-right: 250;
     }
         
 }
