--- a/Iemanja/style/iemanja.css
+++ b/Iemanja/style/iemanja.css
@@ -220,20 +220,8 @@ footer a:hover {
         padding-bottom: 30px;
     }
 
-    #nav1 {
-        padding-right: 250;
-    }
-
-    #nav2 {
-        padding-right: 250;
-    }
-
-    #nav3 {
-        padding-right: 250;
-    }
-
-    #nav4 {
-        padding-right: 250;
+    nav a {
+        padding-right: 250px;
     }
         
 }
