--- a/Orixás/style/orixa.css
+++ b/Orixás/style/orixa.css
@@ -183,7 +183,7 @@ footer a:hover {
         
 } */
 
-@media  (min-width: 200px) and (max-width:600px) 
+@media  (min-width: 600.1px) and (max-width:1300px) 
 {
     
     header {
@@ -193,7 +193,43 @@ footer a:hover {
         margin-bottom: 0;
         height: 400px;
         padding-bottom: 0;
-        border: 1px solid black;
+        background: no-repeat scroll;
+        background-image: url('../image/orixa3.png'), linear-gradient(to bottom, white, var(--cor3));
+        background-position: center bottom;
+        background-size: contain;
+    }
+
+
+    #title h1 {
+        margin-bottom: 7px;
+    }
+
+    #title h3 {
+        padding-top: 2px;
+    }
+
+    header nav {
+        position: absolute;
+        bottom: 0px;
+        width: 100%;
+        background-color: transparent;
+    }
+    header > nav a {
+        margin-right: 200px;
+    }
+        
+}
+
+@media  (min-width: 0px) and (max-width:600px) 
+{
+    
+    header {
+        position: relative;
+        display: block;     
+        padding-bottom: 0;
+        margin-bottom: 0;
+        height: 400px;
+        padding-bottom: 0;
         background: no-repeat scroll;
         background-image: url('../image/orixas1.png'), linear-gradient(to bottom, white, var(--cor3));
         background-position: 80% 80%;
@@ -208,19 +244,6 @@ footer a:hover {
     #title h3 {
         padding-top: 2px;
     }
-
-
-
-    /*#menor {
-        height: 200px;  
-        width: 400;
-        background: url('../image/orixas632_494.png') top  no-repeat scroll;
-        background-size: 80%;
-        
-        padding: 0px;
-        margin: 0px;
-        border: 2px solid black;
-    }*/
 
     header nav {
         position: absolute;
