--- a/Orixás/style/orixa.css
+++ b/Orixás/style/orixa.css
@@ -74,7 +74,17 @@ nav {
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.384);
 }
-nav > a {
+
+.menu {
+    list-style: none;
+}
+
+.menu li {
+    display: inline-block;
+    position:relative;
+}
+
+.menu li a {
     color: var(--cor5);
     padding: 10px;
     border-radius: 3px;
@@ -83,11 +93,21 @@ nav > a {
     transition-duration: 0.3s;
 }
 
-nav > a:hover {
+.menu li :hover {
     background-color: var(--cor4);
     color: var(--corIa2);
     text-decoration: underline;
 }
+
+.menu li  ul{
+    position:absolute;
+    top:25px;
+    left:0;
+    background-color:#fff;
+    display:none;
+    }
+
+.menu li:hover ul, .menu li.over ul{display:inline-block;}
 
 main {
     background-color: white;
