--- a/Orixás/style/orixa.css
+++ b/Orixás/style/orixa.css
@@ -40,8 +40,6 @@ header {
     font: var(--font-Titulos) lighter;
     text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.74);
     margin: auto;
-
-
 }
 
 #title h1{
@@ -73,6 +71,7 @@ nav {
     background-color: var(--cor3);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.384);
+    text-align: left;
 }
 
 .menu {
