--- a/Orixás/style/orixa.css
+++ b/Orixás/style/orixa.css
@@ -70,15 +70,15 @@ header p {
 nav {
     background-color: var(--cor3);
     padding: 10px;
-    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.384);
+    /* box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.384); */
     text-align: left;
 }
 
-.menu {
+/* .menu {
     list-style: none;
 }
 
-.menu li {
+.menu  li {
     display: inline-block;
     position:relative;
 }
@@ -98,7 +98,14 @@ nav {
     text-decoration: underline;
 }
 
-.menu li  ul{
+.menu ul li :hover {
+    background-color: var(--cor4);
+    color: var(--corIa2);
+    text-decoration: underline;
+    background-size: cover;
+}
+
+.menu li ul{
     position:absolute;
     top:25px;
     left:0;
@@ -106,7 +113,49 @@ nav {
     display:none;
     }
 
-.menu li:hover ul, .menu li.over ul{display:inline-block;}
+.menu li ul li{
+    border:1px solid #c0c0c0;
+    display:block;
+    width:150px;
+    }
+
+
+.menu li:hover ul, .menu li.over ul{
+    display:inline-block; 
+    margin-top: 4px; 
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.384);
+    }
+
+.menu li:hover ul > li, .menu li.over ul > li{
+    color: var(--cor5);
+    background-color: var(--cor3);
+    padding: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: 0.3s;
+    list-style: none;
+    } */
+
+.menu{list-style:none; border:1px solid #c0c0c0; }
+
+.menu li{position:relative; display: inline-block; /* border-right:1px solid #c0c0c0; */ }
+
+.menu li a{color:var(--cor5); text-decoration:none; padding-right: 10px; display:block;}
+
+.menu li :hover{background-color: var(--cor4);
+    color: var(--corIa2);
+    text-decoration: underline;}
+
+#submenu li {background-color: var(--cor3);}
+
+#submenu li a:hover{background:var(--cor5); color:#fff;}
+
+.menu li   ul{position:absolute;padding-top: 10px; background-color:var(--cor3); display:none; }
+
+.menu li:hover ul, .menu li.over ul{display:block;}
+
+#submenu li{display:block; width:150px;}
+
 
 main {
     background-color: white;
